--- a/apps/Backend/package.json
+++ b/apps/Backend/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "start": "ts-node src/server.ts",
+  "build": "tsc",
+  "test": "jest --runInBand"
   },
   "keywords": [],
   "author": "",
@@ -23,7 +25,8 @@
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
-    "socket.io": "^4.8.1"
+    "socket.io": "^4.8.1",
+    "supertest": "^7.1.1"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
@@ -31,6 +34,8 @@
     "@types/express": "^5.0.2",
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
+    "@types/supertest": "^6.0.3",
+    "mongodb-memory-server": "^10.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
   }
