--- a/apps/Backend/package.json
+++ b/apps/Backend/package.json
@@ -4,29 +4,38 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-  "start": "ts-node src/server.ts",
-  "build": "tsc",
-  "test": "jest --runInBand"
+    "start": "ts-node src/server.ts",
+    "build": "tsc",
+    "test": "jest --runInBand"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@types/axios": "^0.9.36",
+    "@types/cookie-parser": "^1.4.8",
     "@types/helmet": "^0.0.48",
+    "@types/jest": "^29.5.14",
     "@types/morgan": "^1.9.9",
     "@types/multer": "^1.4.12",
+    "@types/nock": "^10.0.3",
+    "axios": "^1.9.0",
     "bcrypt": "^6.0.0",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.15.0",
     "morgan": "^1.10.0",
     "multer": "^2.0.0",
+    "nock": "^14.0.4",
     "socket.io": "^4.8.1",
-    "supertest": "^7.1.1"
+    "supertest": "^7.1.1",
+    "ts-jest": "^29.3.4"
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
