login register and home page start of dashboard working on api

--- a/apps/Backend/package.json
+++ b/apps/Backend/package.json
@@ -6,8 +6,8 @@
   "scripts": {
     "start": "ts-node src/server.ts",
     "build": "tsc",
-    "test": "jest --runInBand"
-  },
+    "test": "tsc && jest --runInBand",
+"test group": "tsc && jest --runInBand src/tests/group.test.ts"  },
   "keywords": [],
   "author": "",
   "license": "ISC",
