--- a/apps/Backend/package.json
+++ b/apps/Backend/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "dev": "nodemon src/app.ts",
     "start": "ts-node src/server.ts",
     "build": "tsc",
     "test": "tsc && jest --runInBand",
