--- a/apps/Backend/.env
+++ b/apps/Backend/.env
@@ -11,3 +11,4 @@ REFRESH_TOKEN_EXPIRY=1d
 
 MONGO_URI=mongodb://localhost:27017/JaMoveo
 GEMINI_API_KEY=AIzaSyAS33JNLHKpLW3fn_jZuyA6QyuedCmSq7U
+MUSIXMATCH_API_KEY = 
