chords api working not show in the frontend

--- a/apps/Backend/.env
+++ b/apps/Backend/.env
@@ -11,4 +11,4 @@ REFRESH_TOKEN_EXPIRY=1d
 
 MONGO_URI=mongodb://localhost:27017/JaMoveo
 GEMINI_API_KEY=AIzaSyAS33JNLHKpLW3fn_jZuyA6QyuedCmSq7U
-MUSIXMATCH_API_KEY = 
+RAPIDAPI_KEY = e9a4f78308mshb94b30f5300cd0cp1b62ffjsn7cff0f0285b5
