--- a/apps/Backend/package.json
+++ b/apps/Backend/package.json
@@ -48,6 +48,7 @@
     "@types/jsonwebtoken": "^9.0.9",
     "@types/node": "^22.15.21",
     "@types/supertest": "^6.0.3",
+    "@vercel/node": "^5.2.0",
     "mongodb-memory-server": "^10.1.4",
     "ts-node": "^10.9.2",
     "typescript": "^5.8.3"
