--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -2,17 +2,19 @@
     "installCommand": "npm install --legacy-peer-deps",
     "version": 2,
     "builds": [
-        {
-            "src": "package.json",
-            "use": "@vercel/static-build"
-        }
+      {
+        "src": "src/server.ts",
+        "use": "@vercel/node"
+      }
     ],
     "routes": [
-        {
-            "src": "/(.*)",
-            "dest": "/index.html"
-        }
+      {
+        "src": "/(.*)",
+        "dest": "src/server.ts"
+      }
     ],
     "outputDirectory": "build"
 
 }
+
+  
