--- a/apps/Backend/package.json
+++ b/apps/Backend/package.json
@@ -37,6 +37,7 @@
     "multer": "^2.0.0",
     "nock": "^14.0.4",
     "qs": "^6.14.0",
+    "semver": "^7.7.2",
     "socket.io": "^4.8.1",
     "supertest": "^7.1.1",
     "ts-jest": "^29.3.4"
