--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -8,31 +8,8 @@
   ],
   "routes": [
     {
-      "src": "/(.)",
+      "src": "/(.*)",
       "dest": "api/index.ts"
-    }
-  ],
-  "headers": [
-    {
-      "source": "/(.)",
-      "headers": [
-        {
-          "key": "Access-Control-Allow-Origin",
-          "value": "https://ja-moveo-enon.vercel.app/"
-        },
-        {
-          "key": "Access-Control-Allow-Methods",
-          "value": "GET, POST, PUT, DELETE, OPTIONS"
-        },
-        {
-          "key": "Access-Control-Allow-Headers",
-          "value": "X-Requested-With, Content-Type, Authorization"
-        },
-        {
-          "key": "Access-Control-Allow-Credentials",
-          "value": "true"
-        }
-      ]
     }
   ]
 }
