--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -1,15 +1,10 @@
 {
   "version": 2,
-  "builds": [
-    {
-      "src": "api/index.ts",
-      "use": "@vercel/node"
-    }
-  ],
+  "builds": [{ "src": "api/index.ts", "use": "@vercel/node" }],
   "routes": [
     {
-      "src": "/(.*)",
-      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+      "src": "/api/(.*)",
+      "methods": ["GET","POST","PUT","DELETE","OPTIONS"],
       "dest": "/api/index.ts"
     }
   ]
