--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -3,7 +3,7 @@
   "version": 2,
   "functions": {
     "api/index.ts": {
-      "runtime": "nodejs18.x"    
+      "runtime": "vercel/node@18.x"
     }
   },
   "rewrites": [
