--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -1,15 +1,22 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
-  "framework": null,          
-  "buildCommand": null,      
-  "outputDirectory": ".",    
-  "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/index.ts" }
+
+  "builds": [
+    { "src": "api/index.ts", "use": "@vercel/node" }
   ],
+
+  "routes": [
+    {
+      "src": "/api/(.*)",
+      "methods": ["GET","POST","PUT","DELETE","OPTIONS"],
+      "dest": "api/index.ts"
+    }
+  ],
+
   "headers": [
     {
-      "source": "/api/:path*",
+      "source": "/api/(.*)",
       "headers": [
         { "key": "Access-Control-Allow-Origin",      "value": "https://ja-moveo-enon.vercel.app" },
         { "key": "Access-Control-Allow-Methods",     "value": "GET,POST,PUT,DELETE,OPTIONS" },
