--- a/apps/Backend/package.json
+++ b/apps/Backend/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "nodemon src/app.ts",
-    "start": "ts-node src/server.ts",
+    "start": "tsc && ts-node src/server.ts",
     "build": "tsc",
     "test": "tsc && jest --runInBand",
     "test group": "tsc && jest --runInBand src/tests/group.test.ts"
@@ -28,7 +28,7 @@
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.5.0",
-    "express": "^5.1.0",
+    "express": "4.19.2",
     "helmet": "^8.1.0",
     "jest": "^29.7.0",
     "jsonwebtoken": "^9.0.2",
