--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -1,18 +1,24 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
+  "$schema": "https://openapi.vercel.sh/vercel.json", 
   "version": 2,
-
+  "functions": {
+    "api/index.ts": {
+      "runtime": "vercel/node@18.x"
+    }
+  },
   "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/index.ts" }
-  ],
-
-  "headers": [
     {
+      "source": "/api/:path*",     
+      "destination": "/api/index.ts"
+    }
+  ],
+  "headers": [
+    { 
       "source": "/api/:path*",
       "headers": [
-        { "key": "Access-Control-Allow-Origin",      "value": "https://ja-moveo-enon.vercel.app" },
-        { "key": "Access-Control-Allow-Methods",     "value": "GET,POST,PUT,DELETE,OPTIONS" },
-        { "key": "Access-Control-Allow-Headers",     "value": "Content-Type,Authorization" },
+        { "key": "Access-Control-Allow-Origin",     "value": "https://ja-moveo-enon.vercel.app" },
+        { "key": "Access-Control-Allow-Methods",    "value": "GET,POST,PUT,DELETE,OPTIONS" },
+        { "key": "Access-Control-Allow-Headers",    "value": "Content-Type,Authorization" },
         { "key": "Access-Control-Allow-Credentials","value": "true" }
       ]
     }
