--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -1,6 +1,9 @@
 {
   "$schema": "https://openapi.vercel.sh/vercel.json",
   "version": 2,
+  "framework": null,        
+  "buildCommand": null,       
+  "outputDirectory": ".",     
   "rewrites": [
     { "source": "/api/:path*", "destination": "/api/index.ts" }
   ],
@@ -8,10 +11,10 @@
     {
       "source": "/api/:path*",
       "headers": [
-        { "key": "Access-Control-Allow-Origin",     "value": "https://ja-moveo-enon.vercel.app" },
-        { "key": "Access-Control-Allow-Methods",    "value": "GET,POST,PUT,DELETE,OPTIONS" },
-        { "key": "Access-Control-Allow-Headers",    "value": "Content-Type,Authorization" },
-        { "key": "Access-Control-Allow-Credentials","value": "true" }
+        { "key": "Access-Control-Allow-Origin",      "value": "https://ja-moveo-enon.vercel.app" },
+        { "key": "Access-Control-Allow-Methods",     "value": "GET,POST,PUT,DELETE,OPTIONS" },
+        { "key": "Access-Control-Allow-Headers",     "value": "Content-Type,Authorization" },
+        { "key": "Access-Control-Allow-Credentials", "value": "true" }
       ]
     }
   ]
