--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -1,21 +1,11 @@
 {
-  "$schema": "https://openapi.vercel.sh/vercel.json",
-  "version": 2,
-  "framework": null,        
-  "buildCommand": null,       
-  "outputDirectory": ".",     
-  "rewrites": [
-    { "source": "/api/:path*", "destination": "/api/index.ts" }
-  ],
-  "headers": [
+"version": 2,
+  "builds": [{ "src": "api/index.ts", "use": "@vercel/node" }],
+  "routes": [
     {
-      "source": "/api/:path*",
-      "headers": [
-        { "key": "Access-Control-Allow-Origin",      "value": "https://ja-moveo-enon.vercel.app" },
-        { "key": "Access-Control-Allow-Methods",     "value": "GET,POST,PUT,DELETE,OPTIONS" },
-        { "key": "Access-Control-Allow-Headers",     "value": "Content-Type,Authorization" },
-        { "key": "Access-Control-Allow-Credentials", "value": "true" }
-      ]
+      "src": "/api/(.*)",
+      "methods": ["GET","POST","PUT","DELETE","OPTIONS"],
+      "dest": "/api/index.ts"
     }
   ]
 }
