--- a/apps/Backend/vercel.json
+++ b/apps/Backend/vercel.json
@@ -1,11 +1,19 @@
 {
-"version": 2,
+  "version": 2,
   "builds": [{ "src": "api/index.ts", "use": "@vercel/node" }],
   "routes": [
     {
       "src": "/api/(.*)",
-      "methods": ["GET","POST","PUT","DELETE","OPTIONS"],
+      "methods": ["GET", "POST", "PUT", "DELETE", "OPTIONS"],
+      "headers": {
+        "Access-Control-Allow-Origin": "*",
+        "Access-Control-Allow-Headers": "Content-Type, Authorization, X-Requested-With, Accept, Origin",
+        "Access-Control-Allow-Methods": "GET, POST, PUT, DELETE, OPTIONS"
+      },
       "dest": "/api/index.ts"
     }
   ]
 }
+
+
+
